# smooth-comic

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  icon.pptx  install_for_windows.cmake  note.txt  pack_win32.cmake  resources.qrc
src/: CMakeLists.txt  assets.cmake  main.cpp
src/android_dlib_pack_helper/: CMakeLists.txt
src/body/: CMakeLists.txt  artboard-widget.h  body-entry.cpp  body-entry.h  book-viewer-widget.cpp  cmd-option.h  register-qt-meta-types.cpp  register-qt-meta-types.h  telescope-widget.cpp
src/body-dynamic/: CMakeLists.txt
src/body-static/: CMakeLists.txt
src/body/book/: book-cache.cpp  book-cache.h  book-error.h  book-load-pipeline.cpp  book-load-pipeline.h  book-loader.cpp  book-loader.h  book-operation-priority.h  book.cpp  book.h  cache-actor-logger.h  get-thumb-img-req.h  image.h  img-archive.cpp  img-archive.h  img-cache.cpp  img-cache.h  inner_options.h  loaded-page.h  local-archive-page-data-loader.cpp  local-archive-page-data-loader.h  open-session-id.h  page-cache.cpp  page-cache.h  page-data-loader.h  page-data.h  page-db-data.h  page-info.h  page-key.cpp  page-key.h  page-loader.cpp  page-loader.h  page-num.h  page-sequencer.h  thumb-cache.cpp  thumb-cache.h
src/body/engine/: async-deleter.cpp  async-deleter.h  book-cache.cpp  book-cache.h  build-info.cpp  build-info.h  cache-cleaner.cpp  cache-cleaner.h  engine.cpp  engine.h  fs-manager.h  img-cache.cpp  img-cache.h  img-loc.h  path-manager.cpp  path-manager.h  thumb-cache.cpp  thumb-cache.h
src/body/gui/: artboard-widget.cpp  artboard-widget.h  auto-height-layout.cpp  auto-height-layout.h  book-status.cpp  book-status.h  book-status.ui  book-viewer-status-bar-widget.cpp  book-viewer-status-bar-widget.h  book-viewer-status-bar.ui  book-viewer-widget.cpp  book-viewer-widget.h  book-viewer.cpp  book-viewer.h  img-proxy.h  jump-bar.cpp  jump-bar.h  main-window.cpp  main-window.h  page-controll-layer.cpp  page-controll-layer.h  page-switcher.cpp  page-switcher.h  page-thumbnail-item-widget.cpp  page-thumbnail-item-widget.h  page-thumbnail-list-widget.cpp  page-thumbnail-list-widget.h  page-viewer-widget.cpp  page-viewer-widget.h  page-viewer.cpp  page-viewer.h  page-widget.cpp  page-widget.h  property-name.h  scroll-area-dock-widget.cpp  switch-direction.h  thumb-img-widget.cpp  thumb-img-widget.h  thumb-img.cpp  thumb-img.h  (+6 more)
src/body/util/: actor-demo.cpp  actor-demo.h  actor.cpp  actor.h  autojoin-qthread.h  db-file-util.cpp  fs-util.cpp  fs.h  img-util.cpp  img-util.h  libarchive-wrapper.cpp  libarchive-wrapper.h  prop-repo.cpp  prop-repo.h  qobject-actor.cpp  qobject-actor.h  random-access-archive.cpp  sigconns.h  signal.h  sqlite.cpp  sqlite.h  test-actor.cpp  test-actor.h  thread.h
src/core/: CMakeLists.txt  basetype.h  debug-option.h  declare_ptr.h  logger.cpp  logger.h  membuff.cpp  membuff.h  obj-handle.h  proc-startup-info.cpp  proc-startup-info.h  scoped_container.h  strutil.cpp  strutil.h  system.cpp  system.h  thread.cpp  thread.h  ustr.cpp  ustr.h
src/core/debug-option/: debug-option.cpp  debug-option.h  option-center.cpp  option-center.h  option-convert.h  option-source.h  ui-path.cpp  ui-path.h
src/entry/: CMakeLists.txt  entry.cpp  main.cpp
src/gui/: CMakeLists.txt  MainWindow.qml  app-main-quick-window.cpp  app-main-quick-window.h  app-qml-engine.cpp  app-qml-engine.h  app-quick-view.cpp  app-quick-view.h  app-quick-widget.cpp  app-quick-widget.h  app-quick-window.cpp  app-quick-window.h  app-widget.cpp  app-widget.h  app-window.cpp  app-window.h  book-status.cpp  book-status.h  font-icon-enum.h  font-icon-enum.win32.h  gui-engine.cpp  gui-engine.h  main-window.cpp  main-window.h  page-switcher.cpp  page-switcher.h  page-viewer.cpp  page-viewer.h  qml.qrc  register-qt-meta-types.cpp  scroll-area-dock-widget.h  thumb-list-scroll-area.h  thumb-list.cpp
src/gui/book/: gui-book-manager.cpp  gui-book-manager.h  gui-book.cpp  gui-book.h  page-controll-layer.h  page-viewer.cpp  page-widget.h
src/gui/book-area/: book-area.cpp  book-area.h  book-status.cpp  book-status.ui  page-switcher.cpp
src/gui/controll-bar-area/: controll-bar-area.cpp  controll-bar-area.h  controll-bar-icons.cpp  controll-bar-icons.h  controll-bar-icons.win32.cpp  controll-item.cpp  controll-item.h  scale-setting-popup.cpp  scale-setting-popup.h  scale-setting.ui
src/gui/controller/: controller.cpp  controller.h  scale-mode.h  switch-direction.h
src/gui/file-chooser/: file-chooser-entry.cpp  file-chooser-entry.h  file-chooser-stack-frame.cpp  file-chooser-stack-frame.h  file-chooser-stack-info.cpp  file-chooser-stack-info.h  file-chooser-stack.cpp  file-chooser-stack.h  file-chooser.cpp  file-chooser.h  file-tree.cpp
src/gui/file-tree/: file-tree-entry.cpp  file-tree-entry.h  file-tree.cpp  file-tree.h
src/gui/gui-util/: controll-button.cpp  controll-button.h  default-frameless-window.h  font-config.h  font-icon-enum.h  font-icon-enum.win32.h  font-icon.h  frameless-window.h  frameless-window.win32.cpp  frameless-window.win32.h  jump-bar.cpp  painter-saver.h  popup.cpp  popup.h  popup_widget.cpp  popup_widget.h  qml-util.h  title-bar-button.cpp  title-bar-button.h
src/gui/popup-layer/: popup-layer-layout.cpp  popup-layer-layout.h  popup-layer-widget.h  popup-layer.cpp  popup-layer.h
src/gui/qml/: BookChoosePage.qml  BookChoosePageFileListArea.qml  BookChoosePageTopArea.qml  BookReadPage.qml  ControlArea.qml  ControlButton.qml  FileTreeEntry.qml  MainWindow.qml  ToolArea.qml  ToolAreaButton.qml  qml.qrc
src/gui/title-bar-area/: title-bar-area.cpp  title-bar-area.h
src/gui/util/: font-icon-enum.win32.h  frameless-window.h  frameless-window.win32.cpp  frameless-window.win32.h  my-button.cpp  my-button.h  qtobj-strand-entry.h  title-bar-button.cpp  title-bar-button.h
src/loader/: CMakeLists.txt  loader.cpp  loader.h
src/util/: CMakeLists.txt  db-file-util.h  fs-util.h  img-util.h  libarchive-wrapper.cpp  memory.h  prop-repo.cpp  prop-repo.h  random-access-archive.cpp  random-access-archive.h  sigconns.cpp  signal.hpp  sqlite.cpp
src/util/file-system/: file-system.h  path.h  (+1 more)
(+116 files in other folders)
